--- a/index.html
+++ b/index.html
@@ -75,25 +75,34 @@
 
                 <!-- Contact List -->
                 <div id="contactContainer">
-                    <div class="contactItem d-flex" v-for="(contact, i) in contacts" :key="i">
-                        <div class="imgBoxcontainer d-flex justify-content-center align-items-center">
+                    <div class="contactItem d-flex ms-3" v-for="(contact, i) in contacts" :key="i">
+                        <div class="imgBoxcontainer d-flex align-items-center">
                             <div class="imgBox me-3">
                                 <img :src="contact.avatar" :alt="contact.name">
                             </div>
                         </div>
 
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="d-flex flex-column">
+                                <p class="text-white m-0 pt-2"><strong>{{contact.name}}</strong></p>
+                                <p class="subtitle">{{contact.messages[contact.messages.length -1].message}}</p>
+                            </div>
 
-                        <div class="d-flex flex-column">
-                            <p class="text-black m-0 pt-2"><strong>{{contact.name}}</strong></p>
-                            <p class="subtitle">{{contact.messages[contact.messages.length -1].message}}</p>
+                            <!-- div with date -->
+                            <div id="contactDate" class="d-flex align-self-end">
+                                <p class="date">{{contact.messages[contact.messages.length
+                                    -1].date}}</p>
+                            </div>
                         </div>
+                        <!-- div with name and last message -->
+
                     </div>
                 </div>
             </aside>
         </div>
     </div>
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="./js/vue.global.js"></script>
 
     <script src="./js/script.js"></script>
 </body>
