--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 
                 <!-- Contact List -->
                 <div id="contactContainer">
-                    <div class="contactItem d-flex ms-3" v-for="(contact, i) in contacts" :key="i">
+                    <div class="contactItem d-flex" v-for="(contact, i) in contacts" :key="i">
                         <div class="imgBoxcontainer d-flex align-items-center">
                             <div class="imgBox me-3">
                                 <img :src="contact.avatar" :alt="contact.name">
                             </div>
                         </div>
-
-                        <div class="d-flex justify-content-between align-items-center">
+                        <!-- div with name and last message -->
+                        <div class="d-flex justify-content-between w-100">
                             <div class="d-flex flex-column">
                                 <p class="text-white m-0 pt-2"><strong>{{contact.name}}</strong></p>
                                 <p class="subtitle">{{contact.messages[contact.messages.length -1].message}}</p>
@@ -94,7 +94,7 @@
                                     -1].date}}</p>
                             </div>
                         </div>
-                        <!-- div with name and last message -->
+
 
                     </div>
                 </div>
