modified some style

--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
                     <div id="searchBar" class="p-2 rounded-2 me-3 d-flex w-100">
                         <!-- searchBar icon -->
                         <div class="me-2 d-flex align-items-center justify-content-center">
+                            <label for=""></label>
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </div>
 
                         <!-- searchBar input -->
-                        <div class="w-75">
-                            <input type="text" class="bg-transparent border-0 w-100"
+                        <div class="w-100">
+                            <input type="text" name="searchUser" id="searchUser" class="bg-transparent border-0 w-100"
                                 placeholder="Cerca o inizia una nuova chat">
                         </div>
                     </div>
@@ -128,9 +129,9 @@
 
                     <!-- Active chat icons -->
                     <div>
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                        <i class="fa-solid fa-paperclip px-3"></i>
-                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                        <i class="fa-solid fa-magnifying-glass px-3"></i>
+                        <!-- <i class="fa-solid fa-paperclip px-3"></i> -->
+                        <i class="fa-solid fa-ellipsis-vertical px-3"></i>
                     </div>
 
                 </div>
@@ -141,11 +142,16 @@
                     <div id="chat-body">
                         <div class="messageContainer" v-for="(message, i) in contacts[activeChat].messages" :key="i">
                             <div class="message" :class="message.status === 'sent' ? 'messageSent':'messageReceived'">
-                                <p>{{message.message}}</p>
-
+                                <p class="m-0">{{message.message}}</p>
+                                <p class="subtitle align-self-end m-0">{{message.date}}</p>
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <!-- Chat footer with input and icons -->
+                <div id="chat-footer">
+
                 </div>
 
             </div>
