--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="w-100 ">
                             <input type="text" name="searchUser" id="searchUser"
                                 class="bg-transparent border-0 w-100 text-white"
-                                placeholder="Cerca o inizia una nuova chat">
+                                placeholder="Cerca o inizia una nuova chat" v-model="searched" @input="searchChat()">
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,8 @@
 
                 <!-- Contact List -->
                 <div id="contactContainer">
-                    <div class="contactItem d-flex p-1" v-for="(contact, i) in contacts" :key="i"
+                    <div class="contactItem d-flex p-1"
+                        v-for="(contact, i) in (searchFiltered === '' ? contacts : searchFiltered)" :key="i"
                         @click="selectedChat(i)" :class="i === activeChat ? 'active':''">
                         <div class="imgBoxcontainer d-flex align-items-center">
                             <div class="imgBox me-3">
@@ -122,7 +123,7 @@
                         <div>
                             <div class="d-flex flex-column">
                                 <p class="text-white m-0"><strong>{{contacts[activeChat].name}}</strong></p>
-                                <p class="date">Ultimo accesso
+                                <p id="dateUser">Ultimo accesso
                                     alle {{contacts[activeChat].messages[contacts[activeChat].messages.length
                                     -1].date}}</p>
                             </div>
@@ -146,13 +147,8 @@
                         <div class="messageContainer" v-for="(message, i) in contacts[activeChat].messages" :key="i">
                             <div class="message" :class="message.status === 'sent' ? 'messageSent':'messageReceived'">
                                 <p class="m-0">{{message.message}}</p>
-                                <div class="align-self-end d-flex">
+                                <div class="align-self-end">
                                     <p class="subtitle  m-0">{{message.date}}</p>
-                                    <!-- <select name="msgOption" id="msgOption" class="bg-transparent border-0 text-white">
-                                        <option value="none"></option>
-                                        <option value="delete" class="text-black" @click="deleteMessage(i)">Delete
-                                        </option>
-                                    </select> -->
                                 </div>
 
                             </div>
