--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 <div id="contactContainer">
                     <div class="contactItem d-flex p-1"
                         v-for="(contact, i) in (searchFiltered === '' ? contacts : searchFiltered)" :key="i"
-                        @click="selectedChat(i)" :class="i === activeChat ? 'active':''">
+                        @click="selectedChat(contact.id)"
+                        :class="(!searchFiltered ? i === activeChat : contact.id === selectPerson) ? 'active': ''">
                         <div class="imgBoxcontainer d-flex align-items-center">
                             <div class="imgBox me-3">
                                 <img :src="contact.avatar" :alt="contact.name">
@@ -147,8 +148,9 @@
                         <div class="messageContainer" v-for="(message, i) in contacts[activeChat].messages" :key="i">
                             <div class="message" :class="message.status === 'sent' ? 'messageSent':'messageReceived'">
                                 <p class="m-0">{{message.message}}</p>
-                                <div class="align-self-end">
-                                    <p class="subtitle  m-0">{{message.date}}</p>
+                                <div class="align-self-end d-flex">
+                                    <p class="subtitle  m-0 px-3">{{message.date}}</p>
+
                                 </div>
 
                             </div>
